--- a/index.html
+++ b/index.html
@@ -49,48 +49,24 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
-	        <li class="active"><a href="#">PRODUCTS<span class="sr-only">(current)</span></a></li>
-	        <li><a href="#">SINGLE USE</a></li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">UPPER LIMB & HAND<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
-	        </li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">LOWER LIMB & FOOT<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
-	        </li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SPORTS MEDICINE<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
-	        </li>
+	        <li><a href="#">PRODUCTS<span class="sr-only">(current)</span></a></li>
+	        <li class="active"><a href="#">SINGLE USE</a></li>
+	        <li><a href="#">UPPER LIMB & HAND<span class="sr-only"></span></a></li>
+	        <li><a href="#">LOWER LIMB & FOOT<span class="sr-only"></span></a></li>
+	        <li><a href="#">SPORTS MEDICINE<span class="sr-only"></span></a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
+
+	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<ul>
+			<li><a href="singlea.html">INITIAL A</a></li>
+			<li><a href="singlec.html">INITIAL C</a></li>
+			<li><a href="singler.html">INITIAL R</a></li>
+			<li><a href="singles.html">INITIAL S</a></li>
+		</ul>
+	</div>
 
     <section id="third-part text-center">
     	<div class="row clips">
