Subiendo pagina casi terminada

--- a/lower_tibia_activmotion-ligamento.html
+++ b/lower_tibia_activmotion-ligamento.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Activmotion</title>
+	<title>Activmotion HTO + LCA</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Latest compiled and minified CSS -->
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="assets/css/style.css">
     <!-- Tipografías -->
 	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Quicksand:700" rel="stylesheet">
 	<script src="https://use.fontawesome.com/aa0c728197.js"></script>
 </head>
 <body>
@@ -49,79 +50,61 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
-	        <li class="active"><a href="#">PRODUCTS<span class="sr-only">(current)</span></a></li>
+	        <li><a href="#">PRODUCTS<span class="sr-only">(current)</span></a></li>
 	        <li><a href="#">SINGLE USE</a></li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">UPPER LIMB & HAND<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
-	        </li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">LOWER LIMB & FOOT<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
-	        </li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SPORTS MEDICINE<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
-	        </li>
+	        <li class="active"><a href="#">UPPER LIMB & HAND<span class="sr-only"></span></a></li>
+	        <li><a href="#">LOWER LIMB & FOOT<span class="sr-only"></span></a></li>
+	        <li><a href="#">SPORTS MEDICINE<span class="sr-only"></span></a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
+
+	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<ul>
+			<li><a href="singlea.html">FEMUR</a></li>
+			<li><a href="singlec.html">FOOT</a></li>
+			<li><a href="singler.html">TIBIA</a></li>
+			<li><a href="upper_hand_handmotion.html">ANCLE</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-2" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<ul>
+			<li><a href="activmotion.html">ACTIVMOTION</a></li>
+			<li><a href="upper_humerus_alians.html">ACTIVMOTION LIGAMENTO</a></li>
+		</ul>
+	</div>
 	
 	<section id="header-inicio">
-		<div class="container-fluid">
-			<img class="banner-1" src="assets/img/banner-activmotionligamento.jpg" alt="">
+		<div class="container-fluid container-banner" style="background-image: url(../innova/assets/img/banner-activmotionligamento.jpg)">
 		</div>
 	</section>
 
 	<section id="info-singlea">
 		<div class="container-fluid">
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-				<h4>ACTIVMOTION LIGAMENTO</h4>
+			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-a">
+				<h4 class="title-bold">ACTIVMOTION LIGAMENTO</h4>
 				<p>HTO + LCA</p>
 				<br>
-				<h5>INDICATIONS</h5>
+				<h5 class="title-bold">INDICATIONS</h5>
 				<p>The implants of the Activ range are intended for high tibial osteotomy in adults.</p>
 				<br>
-				<h5>TECHNICAL FEATURES</h5>
+				<h5 class="title-bold">TECHNICAL FEATURES</h5>
 				<p>Implant well-suited for sports medicine: two-in-one opertaion for shortening patients rehabilitation time. <br> Optimal design and positioning allowing for the drilling of the tunnel without conflict - Proximal curvature and metaphyseal slope from 8° to 12° <br> Dualtec System technology: 2 polyaxial epiphyseal hole allowing +/- 12.5° angulation (25° cone)</p>
 				<br>
-				<h5>IMPLANTS</h5>
+				<h5 class="title-bold">IMPLANTS</h5>
 				<p>Opening wedge tibial osteotomy plate combined with ACL reconstructive surgery (74.1 mm) available in right and left versions <br> Single fixation: 4.5 mm locking screws, length 30 to 75 mm (5mm increment)</p>
 				<br>
-				<h5>REFERENCES</h5>
+				<h5 class="title-bold">REFERENCES</h5>
 				<div class="container-fluid">
 					<div class="row">
 						<img src="assets/img/img-activmotionligamento.jpg">
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-				<h5>DOCUMENTS TO DOWNLOAD</h5>
+			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-b">
+				<h5 class="title-bold">DOCUMENTS TO DOWNLOAD</h5>
 				<ul>
 					<li><a href="#">Activmotion Ligamento Brochure</a></li>
 					<li><a href="#">Activmotion Ligamento Surgical Technique</a></li>
