--- a/sports_tibia_activmotion.html
+++ b/sports_tibia_activmotion.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="assets/css/style.css">
     <!-- Tipografías -->
 	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Quicksand:700" rel="stylesheet">
 	<script src="https://use.fontawesome.com/aa0c728197.js"></script>
 </head>
 <body>
@@ -49,72 +50,38 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
-	        <li class="active"><a href="#">PRODUCTS<span class="sr-only">(current)</span></a></li>
-	        <li><a href="#">SINGLE USE</a></li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">UPPER LIMB & HAND<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
-	        </li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">LOWER LIMB & FOOT<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
-	        </li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SPORTS MEDICINE<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
-	        </li>
+	        <li><a href="#">PRODUCTS<span class="sr-only">(current)</span></a></li>
+	        <li class="active"><a href="#">SINGLE USE</a></li>
+	        <li><a href="#">UPPER LIMB & HAND<span class="sr-only"></span></a></li>
+	        <li><a href="#">LOWER LIMB & FOOT<span class="sr-only"></span></a></li>
+	        <li><a href="#">SPORTS MEDICINE<span class="sr-only"></span></a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
 	
 	<section id="header-inicio">
-		<div class="container-fluid">
-			<img class="banner-1" src="assets/img/banner-tibia-activmotion.jpg" alt="">
+		<div class="container-fluid container-banner" style="background-image: url(../innova/assets/img/banner-tibia-activmotion.jpg)">
 		</div>
 	</section>
 
 	<section id="info-singlea">
 		<div class="container-fluid">
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-				<h4>ACTIVMOTION LIGAMENTO</h4>
-				<h5>INDICATIONS</h5>
+			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-a">
+				<h4 class="title-bold">ACTIVMOTION LIGAMENTO</h4>
+				<h5 class="title-bold">INDICATIONS</h5>
 				<p>The implants of the Activ range are intended for high tibial osteotomy in adults.</p>
 				<br>
-				<h5>TECHNICAL FEATURES</h5>
+				<h5 class="title-bold">TECHNICAL FEATURES</h5>
 				<p>Implant well-suited to knee biomechanics: positioning onto the antero-medial surface of the tibia and orientation of the screws in an antero-posterior direction for increased resistance to stress when the knee rolls back. <br> Anatomically contoured implant: proximal curvature and metaphyseal slope <br> Dualtec System technology: 1 polyaxial epiphyseal hole allowing +/- 12.5° angulation (25° cone), for size 1 only</p>
 				<br>
-				<h5>IMPLANTS</h5>
+				<h5 class="title-bold">IMPLANTS</h5>
 				<p>2 sizes:</p>
 				<p>Size 1: length 61.6 mm, available in right and left versions</p>
 				<p>Size 2: length 77.4 mm, available in right and left versions, implant design adapted to biplanar cuts</p>
 				<p>Single fixation: 4.5 mm locking screws, length 30 to 75 mm (5 mm increment)</p>
 				<br>
-				<h5>SURGICAL TECHNIQUES: FINAL RESULTS</h5>
+				<h5 class="title-bold">SURGICAL TECHNIQUES: FINAL RESULTS</h5>
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
@@ -134,8 +101,8 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-				<h5>DOCUMENTS TO DOWNLOAD</h5>
+			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-b">
+				<h5 class="title-bold">DOCUMENTS TO DOWNLOAD</h5>
 				<ul>
 					<li><a href="#">Activmotion Brochure</a></li>
 					<li><a href="#">Activmotion Surgical Technique</a></li>
@@ -143,9 +110,9 @@
 					<li><a href="#">Activmotion Size 2 Surgical Technique</a></li>
 				</ul>
 				<br><br>
-				<h5>VIDEO</h5>
+				<h5 class="title-bold">VIDEO</h5>
 				<ul>
-					<li><a href="#">Activmotion</a></li>
+					<li><a href="#">Footmotion Hammertoe</a></li>
 				</ul>
 			</div>
 		</div>
