--- a/upper_radius_alians_midshaft.html
+++ b/upper_radius_alians_midshaft.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="assets/css/style.css">
     <!-- Tipografías -->
 	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Quicksand:700" rel="stylesheet">
 	<script src="https://use.fontawesome.com/aa0c728197.js"></script>
 </head>
 <body>
@@ -49,78 +50,62 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
-	        <li class="active"><a href="#">PRODUCTS<span class="sr-only">(current)</span></a></li>
-	        <li><a href="#">SINGLE USE</a></li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">UPPER LIMB & HAND<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
-	        </li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">LOWER LIMB & FOOT<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
-	        </li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SPORTS MEDICINE<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
-	        </li>
+	        <li><a href="#">PRODUCTS<span class="sr-only">(current)</span></a></li>
+	        <li class="active"><a href="#">SINGLE USE</a></li>
+	        <li><a href="#">UPPER LIMB & HAND<span class="sr-only"></span></a></li>
+	        <li><a href="#">LOWER LIMB & FOOT<span class="sr-only"></span></a></li>
+	        <li><a href="#">SPORTS MEDICINE<span class="sr-only"></span></a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
+
+	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<ul>
+			<li><a href="singlea.html">CLAVICLE</a></li>
+			<li><a href="singlec.html">HUMERUS</a></li>
+			<li><a href="singler.html">RADIUS & ULNA</a></li>
+			<li><a href="upper_hand_handmotion.html">HAND</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-2" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<ul>
+			<li><a href="upper_humerus_alians.html">ALIANS ULNA</a></li>
+			<li><a href="upper_humerus_alians_elbow.html">ALIANS RADIUS</a></li>
+			<li><a href="upper_radius_alians_midshaft.html">ALIANS MIDSHAFT</a></li>
+			<li><a href="upper_humerus_alians_elbow.html">ALIANS FRAGMENT SPECIFIC</a></li>
+		</ul>
+	</div>
 	
 	<section id="header-inicio">
-		<div class="container-fluid">
-			<img class="banner-1" src="assets/img/banner-alians-midshaft.jpg" alt="">
+		<div class="container-fluid container-banner" style="background-image: url(../innova/assets/img/banner-upper_radius_alians_midshaft.jpg)">
 		</div>
 	</section>
 
 	<section id="info-singlea">
 		<div class="container">
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-				<h4>ALIANS MIDSHAFT</h4>
+			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-a">
+				<h4 class="title-bold">ALIANS MIDSHAFT</h4>
 				<br>
-				<h5>INDICATIONS</h5>
+				<h5 class="title-bold">INDICATIONS</h5>
 				<p>The implants of the Alians Forearm range are indended for the fixation of midshaft fractures of the radius and the ulna and ulnar shortening osteotomies in adults.</p>
 				<br>
-				<h5>TECHNICAL FEATURES</h5>
+				<h5 class="title-bold">TECHNICAL FEATURES</h5>
 				<p>Several possible approaches: palmar, lateral or dorsal</p>
 				<p>Cylindro-conical shape head for non-traumatic insertion</p>
 				<p>Low-profile plate with rounded edges to prevent soft tissue irritation</p>
 				<p>A range of 4 locking plates</p>
 				<br>
-				<h5>IMPLANTS</h5>
+				<h5 class="title-bold">IMPLANTS</h5>
 				<p>Symmetrical locking plates coming in 4 sizes (length 80 to 160mm)</p>
 				<p>Single fixation: Ø3.5mm locking and non-locking cortical screws, length 10 to 26mm (2mm increment)</p>
 				<br>
-				<h5>REFERENCES</h5>
+				<h5 class="title-bold">REFERENCES</h5>
 				<img src="assets/img/img-aliansmidshaft.jpg">
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-				<h5>DOCUMENTS TO DOWNLOAD</h5>
+			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-b">
+				<h5 class="title-bold">DOCUMENTS TO DOWNLOAD</h5>
 				<ul>
 					<li><a href="#">Brochure</a></li>
 				</ul>
