--- a/upper_radius_alians_radius.html
+++ b/upper_radius_alians_radius.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Alians Distal Radius</title>
+	<title>Alians Radius</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Latest compiled and minified CSS -->
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="assets/css/style.css">
     <!-- Tipografías -->
 	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Quicksand:700" rel="stylesheet">
 	<script src="https://use.fontawesome.com/aa0c728197.js"></script>
 </head>
 <body>
@@ -49,64 +50,48 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
-	        <li class="active"><a href="#">PRODUCTS<span class="sr-only">(current)</span></a></li>
-	        <li><a href="#">SINGLE USE</a></li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">UPPER LIMB & HAND<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
-	        </li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">LOWER LIMB & FOOT<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
-	        </li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SPORTS MEDICINE<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
-	        </li>
+	        <li><a href="#">PRODUCTS<span class="sr-only">(current)</span></a></li>
+	        <li class="active"><a href="#">SINGLE USE</a></li>
+	        <li><a href="#">UPPER LIMB & HAND<span class="sr-only"></span></a></li>
+	        <li><a href="#">LOWER LIMB & FOOT<span class="sr-only"></span></a></li>
+	        <li><a href="#">SPORTS MEDICINE<span class="sr-only"></span></a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
+
+	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<ul>
+			<li><a href="singlea.html">CLAVICLE</a></li>
+			<li><a href="singlec.html">HUMERUS</a></li>
+			<li><a href="singler.html">RADIUS & ULNA</a></li>
+			<li><a href="upper_hand_handmotion.html">HAND</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-2" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<ul>
+			<li><a href="upper_humerus_alians.html">ALIANS ULNA</a></li>
+			<li><a href="upper_radius_alians_radius.html">ALIANS RADIUS</a></li>
+			<li><a href="upper_radius_alians_midshaft.html">ALIANS MIDSHAFT</a></li>
+			<li><a href="upper_radius_alians_specific.html">ALIANS FRAGMENT SPECIFIC</a></li>
+		</ul>
+	</div>
 	
 	<section id="header-inicio">
-		<div class="container-fluid">
-			<img class="banner-1" src="assets/img/banner-aliansdistalradius.jpg" alt="">
+		<div class="container-fluid container-banner" style="background-image: url(../innova/assets/img/banner-aliansdistalradius.jpg)">
 		</div>
 	</section>
 
 	<section id="info-singlea">
 		<div class="container">
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-				<h4>ALIANS ULNA 3/3</h4>
+			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-a">
+				<h4 class="title-bold">ALIANS ULNA 3/3</h4>
 				<br>
-				<h5>INDICATIONS</h5>
+				<h5 class="title-bold">INDICATIONS</h5>
 				<p>The implants of the Alians Radius range are intended for the fixation of extra and intro-articular fractures as well as distal radius osteotomies in adults.</p>
 				<br>
-				<h5>TECHNICAL FEATURES</h5>
+				<h5 class="title-bold">TECHNICAL FEATURES</h5>
 				<p>Comprehensive range of plates: narrow, standard and wide head</p>
 				<p>Palmar plate running alongside the watershed line</p>
 				<p>Optimal design reducing the risks of soft tissue irritation thanks to the rounded distal edges of the plates</p>
@@ -114,26 +99,26 @@
 				<p>Dualtec System 2 technology: polyaxial holes allowing +/- 10 angulation (20° cone)</p>
 				<p></p>
 				<br>
-				<h5>IMPLANTS</h5>
+				<h5 class="title-bold">IMPLANTS</h5>
 				<p>Narrow head plates available in 2 sizes, standard-head plates available in 3 sizes and wide head plates available in 1 size</p>
 				<p>Single fixation: Ø2.8mm locking screws, length 10 to 28mm (2mm increment), non-locking screws, length 10 to 28mm (2mm increment) and non-locking cortical screws, length 10 to 18mm (2mm increment).</p>
 				<br>
-				<h5>SURGICAL TECHNIQUES: FINAL RESULTS</h5>
+				<h5 class="title-bold">SURGICAL TECHNIQUES: FINAL RESULTS</h5>
 				<br>
-				<h4>PALMAR APPROACH</h4>
+				<h4 class="title-bold">PALMAR APPROACH</h4>
 				<img src="assets/img/img-aliansdistalradius.jpg">
 				<p>Standard head plate</p>
 				<a href="#">Further information</a>
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-				<h5>DOCUMENTS TO DOWNLOAD</h5>
+			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-b">
+				<h5 class="title-bold">DOCUMENTS TO DOWNLOAD</h5>
 				<ul>
 					<li><a href="#">Alians Radius Brochure</a></li>
 					<li><a href="#">Alians Radius Surgical Technique</a></li>
 				</ul>
 				<br>
 				<br>
-				<h5>REFERENCES</h5>
+				<h5 class="title-bold">REFERENCES</h5>
 				<p>Standard head plates</p>
 				<img src="assets/img/img-aliansdistalradius1.jpg">
 				<br>
