--- a/upper_hand_handmotion.html
+++ b/upper_hand_handmotion.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="assets/css/style.css">
     <!-- Tipografías -->
 	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Quicksand:700" rel="stylesheet">
 	<script src="https://use.fontawesome.com/aa0c728197.js"></script>
 </head>
 <body>
@@ -49,76 +50,51 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
-	        <li class="active"><a href="#">PRODUCTS<span class="sr-only">(current)</span></a></li>
+	        <li><a href="#">PRODUCTS<span class="sr-only"></span></a></li>
 	        <li><a href="#">SINGLE USE</a></li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">UPPER LIMB & HAND<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
-	        </li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">LOWER LIMB & FOOT<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
-	        </li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SPORTS MEDICINE<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
-	        </li>
+	        <li class="active"><a href="#">UPPER LIMB & HAND<span class="sr-only">(current)</span></a></li>
+	        <li><a href="#">LOWER LIMB & FOOT<span class="sr-only"></span></a></li>
+	        <li><a href="#">SPORTS MEDICINE<span class="sr-only"></span></a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
+
+	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<ul>
+			<li><a href="singlea.html">CLAVICLE</a></li>
+			<li><a href="singlec.html">HUMERUS</a></li>
+			<li><a href="singler.html">RADIUS & ULNA</a></li>
+			<li><a href="upper_hand_handmotion.html">HAND</a></li>
+		</ul>
+	</div>
 	
 	<section id="header-inicio">
-		<div class="container-fluid">
-			<img class="banner-1" src="assets/img/upperhandmotion.jpg" alt="">
+		<div class="container-fluid container-banner" style="background-image: url(../innova/assets/img/upperhandmotion.jpg)">
 		</div>
 	</section>
 
 	<section id="info-singlea">
 		<div class="container-fluid">
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-				<h4>HAND MOTION</h4>
+			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-a">
+				<h4 class="title-bold">HAND MOTION</h4>
 				<br>
-				<h5>INDICATIONS</h5>
+				<h5 class="title-bold">INDICATIONS</h5>
 				<p>The implants of the HandMotion range are intended for the fixation of bone fractures and osteotomies and for arthrodeses of hand in adults.</p>
 				<br>
-				<h5>TECHNICAL FEATURES</h5>
+				<h5 class="title-bold">TECHNICAL FEATURES</h5>
 				<p>Cannulated, self-tapping, self-compressive screws</p>
 				<p>Cylindro-conical shape head for non-traumatic insertion</p>
 				<p>Short and long-threaded screws depending on the location of the fracture line</p>
 				<p>Ergonomically designed instruments featuring three functions (screw-driver, countersink and depth gauge), available in the three diameters of cannulated screws for reducing operative time</p>
 				<br>
-				<h5>IMPLANTS</h5>
-				<p>Short-threaded cannulated screws in 3 diameters: .03 mm, 2.6 mm and 2.25 mm, length 14 to 34 mm (2 mm increment)</p>
-				<p>Long-threaded cannulated screws in 3 diameters: 3.0 mm, 2.6 mm and 2.25 mm, length 10 to 34 mm (2 mm increment)</p>
+				<h5 class="title-bold">IMPLANTS</h5>
+				<p>Short-threaded cannulated screws in 3 diameters: Ø3.0 mm, Ø2.6 mm and Ø2.25 mm, length 14 to 34 mm (2 mm increment)</p>
+				<p>Long-threaded cannulated screws in 3 diameters: Ø3.0 mm, Ø2.6 mm and Ø2.25 mm, length 10 to 34 mm (2 mm increment)</p>
 				<br>
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-				<h5>DOCUMENTS TO DOWNLOAD</h5>
+			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-b">
+				<h5 class="title-bold">DOCUMENTS TO DOWNLOAD</h5>
 				<ul>
 					<li><a href="#">Brochure</a></li>
 				</ul>
