--- a/upper_humerus_alians_elbow.html
+++ b/upper_humerus_alians_elbow.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="assets/css/style.css">
     <!-- Tipografías -->
 	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Quicksand:700" rel="stylesheet">
 	<script src="https://use.fontawesome.com/aa0c728197.js"></script>
 </head>
 <body>
@@ -49,65 +50,47 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
-	        <li class="active"><a href="#">PRODUCTS<span class="sr-only">(current)</span></a></li>
+	        <li><a href="#">PRODUCTS<span class="sr-only"></span></a></li>
 	        <li><a href="#">SINGLE USE</a></li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">UPPER LIMB & HAND<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
-	        </li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">LOWER LIMB & FOOT<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
-	        </li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SPORTS MEDICINE<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
-	        </li>
+	        <li class="active"><a href="#">UPPER LIMB & HAND<span class="sr-only">(current)</span></a></li>
+	        <li><a href="#">LOWER LIMB & FOOT<span class="sr-only"></span></a></li>
+	        <li><a href="#">SPORTS MEDICINE<span class="sr-only"></span></a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
+
+	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<ul>
+			<li><a href="singlea.html">CLAVICLE</a></li>
+			<li><a href="singlec.html">HUMERUS</a></li>
+			<li><a href="singler.html">RADIUS & ULNA</a></li>
+			<li><a href="upper_hand_handmotion.html">HAND</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-2" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<ul>
+			<li><a href="upper_humerus_alians.html">ALIANS PROXIMAL HUMERUS</a></li>
+			<li><a href="upper_humerus_alians_elbow.html">ALIANS ELBOW</a></li>
+		</ul>
+	</div>
 	
 	<section id="header-inicio">
-		<div class="container-fluid">
-			<img class="banner-1" src="assets/img/banner_upperhumerus.jpg" alt="">
+		<div class="container-fluid container-banner" style="background-image: url(../innova/assets/img/banner-upperhumeruselbows.jpg)">
 		</div>
 	</section>
 
 	<section id="info-singlea">
 		<div class="container">
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-				<h4>ALIANS ELBOW</h4>
+			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-a">
+				<h4 class="title-bold">ALIANS ELBOW</h4>
 				<p>Distal Humerus - Olecranon</p>
 				<br>
-				<h5>INDICATIONS</h5>
+				<h5 class="title-bold">INDICATIONS</h5>
 				<p>The implants of the Alians Elbow range are dedicated to the fixation of fractures and osteotomies of the distal humerus and proximal ulna in adults.</p>
 				<br>
-				<h5>TECHNICAL FEATURES</h5>
+				<h5 class="title-bold">TECHNICAL FEATURES</h5>
 				<p>Precontoured implant including bendable sections</p>
 				<p>Dual System® 2 technology: polyaxialholes allowing +/- 10° screw angulation (20° cone) ensuring optimum flexibility to capture bone fragments and prevent screws impinging on each other Distal Humerus</p>
 				<br>
@@ -122,11 +105,11 @@
 					Single screw diameter: 2.8mm <br>
 					2 epiphyseal hooks making fractures reduction easier and improving implant stability</p>
 				<br>
-				<h5>IMPLANTS</h5>
+				<h5 class="title-bold">IMPLANTS</h5>
 				<p>Distal Humerus</p>
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-				<h5>DOCUMENTS TO DOWNLOAD</h5>
+			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-b">
+				<h5 class="title-bold">DOCUMENTS TO DOWNLOAD</h5>
 				<ul>
 					<li><a href="#">Alians Elbow Brochure</a></li>
 					<li><a href="#">Alians Elbow - Y plates brochure</a></li>
@@ -147,7 +130,7 @@
 
 	<section id="surgical">
 		<div class="container text-center">
-			<h5>SURGICAL TECHNIQUES: FINAL RESULTS</h5>
+			<h5 class="title-bold">SURGICAL TECHNIQUES: FINAL RESULTS</h5>
 			<div class="row">
 				<div class="col-lg-3 col-md-3 col-sm-3-col-xs-12">
 					<h6>PARALLEL FIXATION</h6>
@@ -167,7 +150,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<h5>REFERENCES</h5>
+				<h5 class="title-bold">REFERENCES</h5>
 				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 					<h6>Distal Humerus Medial plates</h6>
 					<img src="assets/img/img_upperhumelb5.jpg">
@@ -179,6 +162,20 @@
 				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 					<h6>Distal Humerus Psotero-lateral plates</h6>
 					<img src="assets/img/img_upperhumelb7.jpg">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+					<h6>Distal Humerus Y plates</h6>
+					<img src="assets/img/img-upper_humerus_alians_elbow1.png">
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+					<h6>Olecranon plates</h6>
+					<img src="assets/img/img-upper_humerus_alians_elbow2.png">
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+					<h6>Olecranon narrow plate</h6>
+					<img src="assets/img/img-upper_humerus_alians_elbow3.png">
 				</div>
 			</div>
 		</div>
