--- a/lower_foot_plating.html
+++ b/lower_foot_plating.html
@@ -51,10 +51,10 @@
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
 	        <li><a href="#">PRODUCTS<span class="sr-only">(current)</span></a></li>
-	        <li><a href="#">SINGLE USE</a></li>
-	        <li class="active"><a href="#">UPPER LIMB & HAND<span class="sr-only"></span></a></li>
-	        <li><a href="#">LOWER LIMB & FOOT<span class="sr-only"></span></a></li>
-	        <li><a href="#">SPORTS MEDICINE<span class="sr-only"></span></a></li>
+	        <li class="active"><a href="singlea.html">SINGLE USE</a></li>
+	        <li><a href="upper_alians_clavicle.html">UPPER LIMB & HAND<span class="sr-only"></span></a></li>
+	        <li><a href="lower_foot_large.html">LOWER LIMB & FOOT<span class="sr-only"></span></a></li>
+	        <li><a href="sports_tibia_activmotion.html">SPORTS MEDICINE<span class="sr-only"></span></a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
@@ -71,11 +71,11 @@
 
 	<div id="lista-menu-2" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		<ul>
-			<li><a href="activmotion.html">FOREFOOT</a></li>
-			<li><a href="upper_humerus_alians.html">LARGE SCREWS</a></li>
-			<li><a href="activmotion.html">PLATING SYSTEM</a></li>
-			<li><a href="upper_humerus_alians.html">MTP</a></li>
-			<li><a href="activmotion.html">HAMMERTOE</a></li>
+			<li><a href="#">FOREFOOT</a></li>
+			<li><a href="lower_foot_large.html">LARGE SCREWS</a></li>
+			<li><a href="lower_foot_plating.html">PLATING SYSTEM</a></li>
+			<li><a href="lower_foot_mtp.html">MTP</a></li>
+			<li><a href="#">HAMMERTOE</a></li>
 		</ul>
 	</div>
 	
