--- a/aliansfragmentspecific.html
+++ b/aliansfragmentspecific.html
@@ -53,15 +53,13 @@
 	        <li><a href="#">SINGLE USE</a></li>
 	        <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">UPPER LIMB & HAND<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
+	          <ul class="nav navbar-nav">
+		        <li><a href="#">PRODUCTS<span class="sr-only">(current)</span></a></li>
+		        <li class="active"><a href="#">SINGLE USE</a></li>
+		        <li><a href="upper_alians_clavicle.html">UPPER LIMB & HAND<span class="sr-only"></span></a></li>
+		        <li><a href="lower_foot_large.html">LOWER LIMB & FOOT<span class="sr-only"></span></a></li>
+		        <li><a href="sports_tibia_activmotion.html">SPORTS MEDICINE<span class="sr-only"></span></a></li>
+		      </ul>
 	        </li>
 	        <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">LOWER LIMB & FOOT<span class="caret"></span></a>
