--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
 	        <li><a href="#">PRODUCTS<span class="sr-only">(current)</span></a></li>
-	        <li class="active"><a href="#">SINGLE USE</a></li>
-	        <li><a href="#">UPPER LIMB & HAND<span class="sr-only"></span></a></li>
-	        <li><a href="#">LOWER LIMB & FOOT<span class="sr-only"></span></a></li>
-	        <li><a href="#">SPORTS MEDICINE<span class="sr-only"></span></a></li>
+	        <li class="active"><a href="singlea.html">SINGLE USE</a></li>
+	        <li><a href="upper_alians_clavicle.html">UPPER LIMB & HAND<span class="sr-only"></span></a></li>
+	        <li><a href="lower_foot_large.html">LOWER LIMB & FOOT<span class="sr-only"></span></a></li>
+	        <li><a href="sports_tibia_activmotion.html">SPORTS MEDICINE<span class="sr-only"></span></a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
