--- a/lower_tibia_activmotion-ligamento.html
+++ b/lower_tibia_activmotion-ligamento.html
@@ -51,10 +51,10 @@
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
 	        <li><a href="#">PRODUCTS<span class="sr-only">(current)</span></a></li>
-	        <li><a href="#">SINGLE USE</a></li>
-	        <li class="active"><a href="#">UPPER LIMB & HAND<span class="sr-only"></span></a></li>
-	        <li><a href="#">LOWER LIMB & FOOT<span class="sr-only"></span></a></li>
-	        <li><a href="#">SPORTS MEDICINE<span class="sr-only"></span></a></li>
+	        <li class="active"><a href="singlea.html">SINGLE USE</a></li>
+	        <li><a href="upper_alians_clavicle.html">UPPER LIMB & HAND<span class="sr-only"></span></a></li>
+	        <li><a href="lower_foot_large.html">LOWER LIMB & FOOT<span class="sr-only"></span></a></li>
+	        <li><a href="sports_tibia_activmotion.html">SPORTS MEDICINE<span class="sr-only"></span></a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
@@ -62,7 +62,7 @@
 
 	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		<ul>
-			<li><a href="singlea.html">FEMUR</a></li>
+			<li><a href="#">FEMUR</a></li>
 			<li><a href="singlec.html">FOOT</a></li>
 			<li><a href="singler.html">TIBIA</a></li>
 			<li><a href="upper_hand_handmotion.html">ANCLE</a></li>
