--- a/upper_humerus_alians.html
+++ b/upper_humerus_alians.html
@@ -51,10 +51,10 @@
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
 	        <li><a href="#">PRODUCTS<span class="sr-only">(current)</span></a></li>
-	        <li class="active"><a href="#">SINGLE USE</a></li>
-	        <li><a href="#">UPPER LIMB & HAND<span class="sr-only"></span></a></li>
-	        <li><a href="#">LOWER LIMB & FOOT<span class="sr-only"></span></a></li>
-	        <li><a href="#">SPORTS MEDICINE<span class="sr-only"></span></a></li>
+	        <li class="active"><a href="singlea.html">SINGLE USE</a></li>
+	        <li><a href="upper_alians_clavicle.html">UPPER LIMB & HAND<span class="sr-only"></span></a></li>
+	        <li><a href="lower_foot_large.html">LOWER LIMB & FOOT<span class="sr-only"></span></a></li>
+	        <li><a href="sports_tibia_activmotion.html">SPORTS MEDICINE<span class="sr-only"></span></a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
@@ -62,9 +62,9 @@
 
 	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		<ul>
-			<li><a href="singlea.html">CLAVICLE</a></li>
-			<li><a href="singlec.html">HUMERUS</a></li>
-			<li><a href="singler.html">RADIUS & ULNA</a></li>
+			<li><a href="upper_alians_clavicle.html">CLAVICLE</a></li>
+			<li><a href="upper_humerus_alians.html">HUMERUS</a></li>
+			<li><a href="upper_radius_alians_ulna.html">RADIUS & ULNA</a></li>
 			<li><a href="upper_hand_handmotion.html">HAND</a></li>
 		</ul>
 	</div>
