arreglando menu product

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
-	        <li><a href="#">PRODUCTS<span class="sr-only">(current)</span></a></li>
+	        <li><a href="index.html">PRODUCTS<span class="sr-only">(current)</span></a></li>
 	        <li class="active"><a href="singlea.html">SINGLE USE</a></li>
 	        <li><a href="upper_alians_clavicle.html">UPPER LIMB & HAND<span class="sr-only"></span></a></li>
 	        <li><a href="lower_foot_large.html">LOWER LIMB & FOOT<span class="sr-only"></span></a></li>
