--- a/aliansfragmentspecific.html
+++ b/aliansfragmentspecific.html
@@ -49,7 +49,7 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
-	        <li class="active"><a href="#">PRODUCTS<span class="sr-only">(current)</span></a></li>
+	        <li><a href="index.html">PRODUCTS<span class="sr-only">(current)</span></a></li>
 	        <li><a href="#">SINGLE USE</a></li>
 	        <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">UPPER LIMB & HAND<span class="caret"></span></a>
