--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<title>Innova Home</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="assets/img/logo.png">
 	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<!-- CSS local -->
 	<link rel="stylesheet" href="assets/css/style.css">
     <!-- Tipografías -->
@@ -19,11 +20,11 @@
 			<div class="contenido_header">
 				<div class="inicio">
 					<ul class="lista-principal">
-						<li><a href="#">COMPANY</a></li>
-						<li><a href="#">NEWS</a></li>
+						<li><a href="#">COMPAÑÍA</a></li>
+						<li><a href="#">NOTICIAS</a></li>
 						<li><a href="#">AGENDA</a></li>
 						<li><a href="#">LINKS</a></li>
-						<li><a href="#">CONTACT</a></li>
+						<li><a href="#">CONTACTO</a></li>
 					</ul>
 				</div>	
 				<div class="datos-contacto">
@@ -34,44 +35,49 @@
 		</div>
 	</section>
 
-	<nav class="navbar navbar-default">
-	  <div class="container-fluid">
-	    <!-- Brand and toggle get grouped for better mobile display -->
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	    </div>
-
-	    <!-- Collect the nav links, forms, and other content for toggling -->
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      <ul class="nav navbar-nav">
-	        <li><a href="index.html">PRODUCTS<span class="sr-only">(current)</span></a></li>
-	        <li class="active"><a href="singlea.html">SINGLE USE</a></li>
-	        <li><a href="upper_alians_clavicle.html">UPPER LIMB & HAND<span class="sr-only"></span></a></li>
-	        <li><a href="lower_foot_large.html">LOWER LIMB & FOOT<span class="sr-only"></span></a></li>
-	        <li><a href="sports_tibia_activmotion.html">SPORTS MEDICINE<span class="sr-only"></span></a></li>
-	      </ul>
-	    </div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
+	<nav class="nav">
+	  <a class="nav-link" href="#" style="background-color: #407d9e;">PRODUCTOS</a>
+	  <a class="nav-link" href="#">IMPLANTES ESTERILIZADOS</a>
+	  <a class="nav-link" href="#">EXTREMIDAD SUPERIOR Y MANO</a>
+	  <a class="nav-link" href="#">EXTREMIDAD INFERIOR Y PIE</a>
+	  <a class="nav-link" href="#">MEDICINA DEPORTIVA</a>
 	</nav>
 
-	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+	<!--<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		<ul>
 			<li><a href="singlea.html">INITIAL A</a></li>
 			<li><a href="singlec.html">INITIAL C</a></li>
 			<li><a href="singler.html">INITIAL R</a></li>
 			<li><a href="singles.html">INITIAL S</a></li>
 		</ul>
+	</div>-->
+
+	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+	  <div class="carousel-inner">
+	    <div class="carousel-item active">
+	      <img class="d-block w-100 img-carrusel" src="assets/img/BROCHURE-CARRUSEL/activankle.png" alt="First slide">
+	    </div>
+	    <div class="carousel-item">
+	      <img class="d-block w-100 img-carrusel" src="assets/img/BROCHURE-CARRUSEL/ACTIVEMOTION2.png" alt="Second slide">
+	    </div>
+	    <div class="carousel-item">
+	      <img class="d-block w-100 img-carrusel" src="assets/img/BROCHURE-CARRUSEL/activmotion.png" alt="Third slide">
+	    </div>
+	  </div>
+	  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+	    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	    <span class="sr-only">Previous</span>
+	  </a>
+	  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+	    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+	    <span class="sr-only">Next</span>
+	  </a>
 	</div>
 
     <section id="third-part text-center">
     	<div class="row clips">
     		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-				<div class="thumbnail">
+				<div class="img-thumbnail">
 				   <div class="caption">
 				     <h3 class="text-center title-blue">NEW CLIP'S NEWS</h3>
 				     <img src="#" alt="">
@@ -80,7 +86,7 @@
 				</div>
     		</div>
     		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-				<div class="thumbnail">
+				<div class="img-thumbnail">
 				   <div class="caption">
 				     <h3 class="text-center title-blue">NEW CLIP'S AGENDA</h3>
 				     <img src="#" alt="">
@@ -89,7 +95,7 @@
 				</div>
     		</div>
     		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-				<div class="thumbnail">
+				<div class="img-thumbnail">
 				   <div class="caption">
 				     <h3 class="text-center title-blue">DOCUMENTATION</h3>
 				     <img src="#" alt="">
@@ -100,23 +106,6 @@
     	</div>
     </section>
 
-	<section id="menu-down" class="text-center">
-		<div class="inicio">
-			<ul class="lista-principal">
-				<li><a href="#">COMPANY</a></li>
-				<li><a href="#">NEWS</a></li>
-				<li><a href="#">AGENDA</a></li>
-				<li><a href="#">CERTIFICATIONS</a></li>
-				<li><a href="#">INITIAL R</a></li>
-				<li><a href="#">INITIAL A</a></li>
-				<li><a href="#">BROCHURES</a></li>
-				<li><a href="#">VIDEOS</a></li>
-				<li><a href="#">LEGAL NOTICES</a></li>
-				<li><a href="#">CONTACT</a></li>
-			</ul>
-		</div>	
-	</section>
-
 	<footer class="text-center">
 		<h4>INNOVATIONS MEANS MOTION</h4>
 		<p>Administración: Avenida Apoquindo 6410 oficina 605 Las Condes</p>
@@ -126,6 +115,8 @@
 	
 
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
