--- a/compania.html
+++ b/compania.html
@@ -37,74 +37,37 @@
 
 	<nav class="nav">
 	  <a class="nav-link" href="#" style="background-color: #407d9e;">PRODUCTOS</a>
-	  <a id="implantes" class="nav-link" href="#">IMPLANTES ESTERILIZADOS</a>
+	  <a class="nav-link" href="#">IMPLANTES ESTERILIZADOS</a>
 	  <a class="nav-link" href="#">EXTREMIDAD SUPERIOR Y MANO</a>
 	  <a class="nav-link" href="#">EXTREMIDAD INFERIOR Y PIE</a>
 	  <a class="nav-link" href="#">MEDICINA DEPORTIVA</a>
 	</nav>
 
-	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+	<!--<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		<ul>
 			<li><a href="singlea.html">INITIAL A</a></li>
 			<li><a href="singlec.html">INITIAL C</a></li>
 			<li><a href="singler.html">INITIAL R</a></li>
 			<li><a href="singles.html">INITIAL S</a></li>
 		</ul>
-	</div>
+	</div>-->
 
-	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-	  <div class="carousel-inner">
-	    <div class="carousel-item active">
-	      <img class="d-block w-100 img-carrusel" src="assets/img/BROCHURE-CARRUSEL/activankle.png" alt="First slide">
-	    </div>
-	    <div class="carousel-item">
-	      <img class="d-block w-100 img-carrusel" src="assets/img/BROCHURE-CARRUSEL/ACTIVEMOTION2.png" alt="Second slide">
-	    </div>
-	    <div class="carousel-item">
-	      <img class="d-block w-100 img-carrusel" src="assets/img/BROCHURE-CARRUSEL/activmotion.png" alt="Third slide">
-	    </div>
-	  </div>
-	  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-	    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	    <span class="sr-only">Previous</span>
-	  </a>
-	  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-	    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-	    <span class="sr-only">Next</span>
-	  </a>
-	</div>
-
-    <section id="third-part text-center">
-    	<div class="row clips">
-    		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-				<div class="img-thumbnail">
-				   <div class="caption">
-				     <h3 class="text-center title-blue">NEW CLIP'S NEWS</h3>
-				     <img src="#" alt="">
-				     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla erat, convallis ut tellus ut, tincidunt placerat magna. Cras est nibh, dictu title-bluem non odio non, viverra ornare justo.</p>
-				   </div>
+	<div class="container container-2">
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+				<div class="img-thumbnail thumbnail-2">
+					<div class="caption">
+						<h3 class="title-blue">EMPRESA</h3>
+						<p>Innova Solutions SPA. Emprendimiento en Chile con el propósito de proveer soluciones de implantes médicos de última generación. 
+						<br>
+						Contamos con productos innovadores que facilitan el trabajo médica y de este modo transmitir esta tecnología de punta a cada uno de sus pacientes.<br>
+						Además de contar con los sistemas convencionales contamos con una línea de implantes esterilizados: "listos cuando tú lo estés". Nuestros clientes pueden evitar todos los problemas que el proceso de esterilización trae consifo a precios sumamente convenientes, eliminando potenciales problemas, ahorrando tiempo y dinero. <br>
+						Somos representantes en Chile de NEWCLIP TECHNICS, compañía francesa productora de implantes de última generación y de continuo desarrollo al servicio médico. Newclip Technics está presente en más de 25 países incluidos Europa, USA y Australia. Con facultativos de renombre mundial que abalan nuestros productos, contamos con certificaciones FDA y de la Unión Europea, disponibles en Chile.</p>
+					</div>
 				</div>
-    		</div>
-    		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-				<div class="img-thumbnail">
-				   <div class="caption">
-				     <h3 class="text-center title-blue">NEW CLIP'S AGENDA</h3>
-				     <img src="#" alt="">
-				     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla erat, convallis ut tellus ut, tincidunt placerat magna. Cras est nibh, dictum non odio non, viverra ornare justo.</p>
-				   </div>
-				</div>
-    		</div>
-    		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-				<div class="img-thumbnail">
-				   <div class="caption">
-				     <h3 class="text-center title-blue">DOCUMENTATION</h3>
-				     <img src="#" alt="">
-				     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla erat, convallis ut tellus ut, tincidunt placerat magna. Cras est nibh, dictum non odio non, viverra ornare justo.</p>
-				   </div>
-				</div>
-    		</div>
-    	</div>
-    </section>
+		    </div>
+		</div>
+    </div>
 
 	<footer class="text-center">
 		<h4>INNOVATIONS MEANS MOTION</h4>
@@ -118,6 +81,5 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-	<script src="assets/js/main.js"></script>
 </body>
 </html>
