--- a/singlea.html
+++ b/singlea.html
@@ -20,11 +20,10 @@
 			<div class="contenido_header">
 				<div class="inicio">
 					<ul class="lista-principal">
-						<li><a href="#">COMPANY</a></li>
-						<li><a href="#">NEWS</a></li>
-						<li><a href="#">AGENDA</a></li>
-						<li><a href="#">LINKS</a></li>
-						<li><a href="#">CONTACT</a></li>
+						<li><a href="#">PRODUCTOS</a></li>
+						<li><a href="#">PRODUCTOS ESTERILIZADOS</a></li>
+						<li><a href="compania.html">EMPRESA</a></li>
+						<li><a href="#">CONTACTO</a></li>
 					</ul>
 				</div>	
 				<div class="datos-contacto">
@@ -36,9 +35,8 @@
 	</section>
 
 	<nav class="nav">
-	  <a class="nav-link" href="#" style="background-color: #407d9e;">PRODUCTOS</a>
 	  <a id="implantes" class="nav-link" href="#">IMPLANTES ESTERILIZADOS</a>
-	  <a class="nav-link" href="#">EXTREMIDAD SUPERIOR Y MANO</a>
+	  <a id="superior" class="nav-link" href="#">EXTREMIDAD SUPERIOR Y MANO</a>
 	  <a class="nav-link" href="#">EXTREMIDAD INFERIOR Y PIE</a>
 	  <a class="nav-link" href="#">MEDICINA DEPORTIVA</a>
 	</nav>
@@ -49,6 +47,21 @@
 			<li><a href="singlec.html">INITIAL C</a></li>
 			<li><a href="singler.html">INITIAL R</a></li>
 			<li><a href="singles.html">INITIAL S</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-2" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul>
+			<li><a id="clavicula" href="upper_alians_clavicle.html">CLAVICULA</a></li>
+			<li><a href="singlec.html">HUMERO</a></li>
+			<li><a href="singler.html">RADIO Y ULNA</a></li>
+			<li><a href="singles.html">MANO</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-3" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul>
+			<li><a href="upper_alians_clavicle.html">ALIANS CLAVICULA</a></li>
 		</ul>
 	</div>
 
