--- a/upper_alians_clavicle.html
+++ b/upper_alians_clavicle.html
@@ -20,11 +20,10 @@
 			<div class="contenido_header">
 				<div class="inicio">
 					<ul class="lista-principal">
-						<li><a href="#">COMPANY</a></li>
-						<li><a href="#">NEWS</a></li>
-						<li><a href="#">AGENDA</a></li>
-						<li><a href="#">LINKS</a></li>
-						<li><a href="#">CONTACT</a></li>
+						<li><a href="#">PRODUCTOS</a></li>
+						<li><a href="#">PRODUCTOS ESTERILIZADOS</a></li>
+						<li><a href="compania.html">EMPRESA</a></li>
+						<li><a href="#">CONTACTO</a></li>
 					</ul>
 				</div>	
 				<div class="datos-contacto">
@@ -41,7 +40,7 @@
 	  <a class="nav-link" href="#">EXTREMIDAD INFERIOR Y PIE</a>
 	  <a class="nav-link" href="#">MEDICINA DEPORTIVA</a>
 	</nav>
-	
+
 	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
 		<ul>
 			<li><a href="singlea.html">INITIAL A</a></li>
@@ -97,8 +96,8 @@
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-b">
 					<h5 class="title-bold">DOCUMENTS TO DOWNLOAD</h5>
 					<ul>
-						<li><a href="#">Alians clavicle brochure</a></li>
-						<li><a href="#">Alians Clavicle surgical technique</a></li>
+						<li><a href="assets/pdf/brochureen_aliansclav_ed13_bd_2__079555100_1814_13032017.pdf" download="Alians_clavicle_brochure">Alians clavicle brochure</a></li>
+						<li><a href="assets/pdf/toen_aliansclav_ed13_hd__068425600_1700_13032017.pdf" download="Alians_clavicle_surgical_technique">Alians clavicle surgical technique</a></li>
 					</ul>
 					<br>
 					<h5 class="title-bold">VIDEOS</h5>
@@ -147,23 +146,6 @@
 				</div>
 			</div>
 		</div>
-	</section>
-
-	<section id="menu-down" class="text-center">
-		<div class="inicio">
-			<ul class="lista-principal">
-				<li><a href="#">COMPANY</a></li>
-				<li><a href="#">NEWS</a></li>
-				<li><a href="#">AGENDA</a></li>
-				<li><a href="#">CERTIFICATIONS</a></li>
-				<li><a href="#">INITIAL R</a></li>
-				<li><a href="#">INITIAL A</a></li>
-				<li><a href="#">BROCHURES</a></li>
-				<li><a href="#">VIDEOS</a></li>
-				<li><a href="#">LEGAL NOTICES</a></li>
-				<li><a href="#">CONTACT</a></li>
-			</ul>
-		</div>	
 	</section>
 
 	<footer class="text-center">
