--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<div id="lista-menu-2" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
 		<ul>
 			<li><a id="clavicula" href="upper_alians_clavicle.html">CLAVICULA</a></li>
-			<li><a href="singlec.html">HUMERO</a></li>
+			<li><a id="humero" href="#">HUMERO</a></li>
 			<li><a href="singler.html">RADIO Y ULNA</a></li>
 			<li><a href="singles.html">MANO</a></li>
 		</ul>
@@ -62,6 +62,13 @@
 	<div id="lista-menu-3" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
 		<ul>
 			<li><a href="upper_alians_clavicle.html">ALIANS CLAVICULA</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-4" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul>
+			<li><a href="upper_humerus_alians.html">ALIANS PROXIMAL HUMERUS</a></li>
+			<li><a href="upper_humerus_alians_elbow.html">ALIANS ELBOW</a></li>
 		</ul>
 	</div>
 
