--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 	<nav class="nav">
 	  <a id="implantes" class="nav-link" href="#">IMPLANTES ESTERILIZADOS</a>
 	  <a id="superior" class="nav-link" href="#">EXTREMIDAD SUPERIOR Y MANO</a>
-	  <a class="nav-link" href="#">EXTREMIDAD INFERIOR Y PIE</a>
-	  <a class="nav-link" href="#">MEDICINA DEPORTIVA</a>
+	  <a id="inferior" class="nav-link" href="#">EXTREMIDAD INFERIOR Y PIE</a>
+	  <a id="medicina" class="nav-link" href="#">MEDICINA DEPORTIVA</a>
 	</nav>
 
 	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
-		<ul>
+		<ul style="margin-left: -10px;">
 			<li><a href="singlea.html">INITIAL A</a></li>
 			<li><a href="singlec.html">INITIAL C</a></li>
 			<li><a href="singler.html">INITIAL R</a></li>
@@ -54,8 +54,8 @@
 		<ul>
 			<li><a id="clavicula" href="upper_alians_clavicle.html">CLAVICULA</a></li>
 			<li><a id="humero" href="#">HUMERO</a></li>
-			<li><a href="singler.html">RADIO Y ULNA</a></li>
-			<li><a href="singles.html">MANO</a></li>
+			<li><a id="radio" href="singler.html">RADIO Y CUBITO</a></li>
+			<li><a id="mano" href="singles.html">MANO</a></li>
 		</ul>
 	</div>
 
@@ -67,10 +67,43 @@
 
 	<div id="lista-menu-4" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
 		<ul>
-			<li><a href="upper_humerus_alians.html">ALIANS PROXIMAL HUMERUS</a></li>
-			<li><a href="upper_humerus_alians_elbow.html">ALIANS ELBOW</a></li>
+			<li><a href="upper_humerus_alians.html">HUMERO PROXIMAL</a></li>
+			<li><a href="upper_humerus_alians_elbow.html">CODO</a></li>
 		</ul>
 	</div>
+
+	<div id="lista-menu-5" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul>
+			<li><a href="uppper_radius_alians_ulna.html">ACORTAMIENTO CUBITAL</a></li>
+			<li><a href="upper_radius_alians_radius.html">RADIO DISTAL</a></li>
+			<li><a href="upper_radius_alians_midshaft.html">ANTEBRAZO</a></li>
+			<li><a href="upper_radius_alians_specific.html">FRAGMENTO ESPECÍFICO</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-6" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul>
+			<li><a href="upper_humerus_alians.html">TORNILLOS CANULADOS</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-7" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: 368px;">
+			<li><a href="upper_humerus_alians.html">FEMUR</a></li>
+			<li><a href="upper_humerus_alians_elbow.html">PIE</a></li>
+			<li><a href="upper_humerus_alians.html">TIBIA</a></li>
+			<li><a href="upper_humerus_alians_elbow.html">TOBILLO</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-8" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: 674px;">
+			<li><a href="upper_humerus_alians.html">HTO</a></li>
+			<li><a href="upper_humerus_alians_elbow.html">HTO LIGAMENTO</a></li>
+		</ul>
+	</div>
+
+
 
 	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 	  <div class="carousel-inner">
