--- a/index.html
+++ b/index.html
@@ -109,13 +109,16 @@
 	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 	  <div class="carousel-inner">
 	    <div class="carousel-item active">
-	      <img class="d-block w-100 img-carrusel" src="assets/img/BROCHURE-CARRUSEL/activankle.png" alt="First slide">
+	      <img class="d-block w-100 img-carrusel" src="assets/img/banner-index.png" alt="First slide">
 	    </div>
 	    <div class="carousel-item">
-	      <img class="d-block w-100 img-carrusel" src="assets/img/BROCHURE-CARRUSEL/ACTIVEMOTION2.png" alt="Second slide">
+	      <img class="d-block w-100 img-carrusel" src="assets/img/Capa-2.jpg" alt="Second slide">
 	    </div>
 	    <div class="carousel-item">
-	      <img class="d-block w-100 img-carrusel" src="assets/img/BROCHURE-CARRUSEL/activmotion.png" alt="Third slide">
+	      <img class="d-block w-100 img-carrusel" src="assets/img/banner-index3_02.png" alt="Third slide">
+	    </div>
+	    <div class="carousel-item">
+	      <img class="d-block w-100 img-carrusel" src="assets/img/banner-aliansdistalradius.jpg" alt="Fourth slide">
 	    </div>
 	  </div>
 	  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
